// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationManagement Navigator Renders the LocationManagement Navigator with LocationKebabMenu disabled 1`] = `
<StackNavigator
  screenListeners={
    {
      "beforeRemove": [Function],
      "blur": [Function],
      "focus": [Function],
    }
  }
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
      "headerTitleStyle": {
        "fontSize": 18,
      },
    }
  }
>
  <Screen
    component={[Function]}
    name="Zones"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.ZONES" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Aisles"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.AISLES" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Sections"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SECTIONS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="SectionDetails"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.LOCATION_DETAILS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="EditLocation"
    options={
      {
        "headerBackTitleVisible": false,
        "headerTitle": "[missing "en.LOCATION.EDIT_LOCATION" translation]",
        "headerTitleAlign": "left",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddPallet"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.SCAN_PALLET" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="AddZone"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.ADD_ZONE" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="AddSection"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.ADD_SECTIONS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddItems"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SCAN_ITEM" translation]",
      }
    }
  />
</StackNavigator>
`;

exports[`LocationManagement Navigator Renders the LocationManagement Navigator with Print List Button 1`] = `
<StackNavigator
  screenListeners={
    {
      "beforeRemove": [Function],
      "blur": [Function],
      "focus": [Function],
    }
  }
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
      "headerTitleStyle": {
        "fontSize": 18,
      },
    }
  }
>
  <Screen
    component={[Function]}
    name="Zones"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.ZONES" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Aisles"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.AISLES" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Sections"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SECTIONS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="SectionDetails"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.LOCATION_DETAILS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="EditLocation"
    options={
      {
        "headerBackTitleVisible": false,
        "headerTitle": "[missing "en.LOCATION.EDIT_LOCATION" translation]",
        "headerTitleAlign": "left",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddPallet"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.SCAN_PALLET" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="AddZone"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.ADD_ZONE" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="AddSection"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.ADD_SECTIONS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddItems"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SCAN_ITEM" translation]",
      }
    }
  />
</StackNavigator>
`;

exports[`LocationManagement Navigator Renders the LocationManagement Navigator, manager 1`] = `
<StackNavigator
  screenListeners={
    {
      "beforeRemove": [Function],
      "blur": [Function],
      "focus": [Function],
    }
  }
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
      "headerTitleStyle": {
        "fontSize": 18,
      },
    }
  }
>
  <Screen
    component={[Function]}
    name="Zones"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.ZONES" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Aisles"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.AISLES" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Sections"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SECTIONS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="SectionDetails"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.LOCATION_DETAILS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="EditLocation"
    options={
      {
        "headerBackTitleVisible": false,
        "headerTitle": "[missing "en.LOCATION.EDIT_LOCATION" translation]",
        "headerTitleAlign": "left",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddPallet"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.SCAN_PALLET" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="AddZone"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.ADD_ZONE" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="AddSection"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.ADD_SECTIONS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddItems"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SCAN_ITEM" translation]",
      }
    }
  />
</StackNavigator>
`;

exports[`LocationManagement Navigator Renders the LocationManagement Navigator, non manager 1`] = `
<StackNavigator
  screenListeners={
    {
      "beforeRemove": [Function],
      "blur": [Function],
      "focus": [Function],
    }
  }
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
      "headerTitleStyle": {
        "fontSize": 18,
      },
    }
  }
>
  <Screen
    component={[Function]}
    name="Zones"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.ZONES" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Aisles"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.AISLES" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Sections"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SECTIONS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="SectionDetails"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.LOCATION_DETAILS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="EditLocation"
    options={
      {
        "headerBackTitleVisible": false,
        "headerTitle": "[missing "en.LOCATION.EDIT_LOCATION" translation]",
        "headerTitleAlign": "left",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddPallet"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.SCAN_PALLET" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="AddZone"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.ADD_ZONE" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="AddSection"
    options={
      {
        "headerTitle": "[missing "en.LOCATION.ADD_SECTIONS" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddItems"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SCAN_ITEM" translation]",
      }
    }
  />
</StackNavigator>
`;

exports[`LocationManagement Navigator Renders the cameraButton header icon 1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  >
    <mockConstructor
      color="#ffffffff"
      name="camera"
      size={20}
    />
  </View>
</TouchableOpacity>
`;

exports[`LocationManagement Navigator Renders the scanButton header icon 1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 10,
        "paddingRight": 15,
      }
    }
  >
    <mockConstructor
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</TouchableOpacity>
`;
